--- a/views/anime/new.ejs
+++ b/views/anime/new.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="min-h-screen text-gray-200">
+  <%- include('../nav.ejs') %>
   <div class="max-w-lg mx-auto py-12 px-4">
     <h1 class="text-3xl font-extrabold mb-8 text-center tracking-tight title-gradient">Crear nueva noticia</h1>
     <form action="/new" method="POST" class="space-y-6">
