--- a/views/anime/index.ejs
+++ b/views/anime/index.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="min-h-screen text-gray-200">
+  <%- include('../nav.ejs') %>
   <% 
     function formatDate(dateString) {
       const date = new Date(dateString);
